--- a/Raw_to_tif.ipynb
+++ b/Raw_to_tif.ipynb
@@ -1,1 +1,89 @@
-
+{
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0b61dfa4",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "\"\"\"This is a simple code to convert the raw .jpeg thermal from djiM3T to .tif. This is a simple demonstration \n",
+    "   of the use of dji_irp.exe under the latest version of the dji_thermal_sdk\n",
+    "   \n",
+    "   Thus, we are not using exiftool here to get and copy the metadata. Please download and use exiftool.exe for that. \"\"\"\n",
+    "\n",
+    "import subprocess\n",
+    "import os\n",
+    "import numpy as np\n",
+    "import tifffile\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "# -------------------- INPUT/OUTPUT --------------------\n",
+    "input_file = r\"path to the input file in .jpeg\"\n",
+    "output_dir = r\"Output directory path here\"\n",
+    "os.makedirs(output_dir, exist_ok=True)\n",
+    "\n",
+    "# DJI TSDK Executable\n",
+    "dji_irp = r\"...........\\utility\\bin\\windows\\release_x64\\dji_irp.exe\" #the path to the dji.irp.exe in the latest version of dji_thermal_sdk\n",
+    "\n",
+    "# Environmental correction parameters\n",
+    "emissivity = 0.95\n",
+    "atmp = 25            # Ambient temperature in °C\n",
+    "humidity = 80        # Relative humidity in %\n",
+    "distance = 15        # Drone height in meters\n",
+    "refl_temp = 23       # Reflected apparent temperature in °C\n",
+    "\n",
+    "# DJI M3T RAW dimensions\n",
+    "raw_width = 640\n",
+    "raw_height = 512\n",
+    "\n",
+    "# -------------------- PROCESS IMAGE --------------------\n",
+    "basename = os.path.splitext(os.path.basename(input_file))[0]\n",
+    "\n",
+    "# Measure Temperature (float32) with corrections\n",
+    "measure_file = os.path.join(output_dir, f\"{basename}_temperature.raw\")\n",
+    "subprocess.run([\n",
+    "    dji_irp,\n",
+    "    \"-s\", input_file,\n",
+    "    \"-a\", \"measure\",\n",
+    "    \"-o\", measure_file,\n",
+    "    \"--measurefmt\", \"float32\",\n",
+    "    \"--emissivity\", str(emissivity),\n",
+    "    \"--ambient\", str(atmp),\n",
+    "    \"--humidity\", str(humidity),\n",
+    "    \"--distance\", str(distance),\n",
+    "    \"--reflection\", str(refl_temp)\n",
+    "], check=True)\n",
+    "\n",
+    "# Convert RAW → float32 TIFF\n",
+    "tif_file = os.path.join(output_dir, f\"{basename}_temperature.tif\")\n",
+    "data = np.fromfile(measure_file, dtype=np.float32).reshape((raw_height, raw_width))\n",
+    "tifffile.imwrite(tif_file, data)\n",
+    "\n",
+    "# Display temperature map\n",
+    "plt.figure(figsize=(8,6))\n",
+    "plt.imshow(data, cmap='inferno')\n",
+    "plt.colorbar(label='Temperature (°C)')\n",
+    "plt.title(f\"Thermal Image - {basename}\")\n",
+    "plt.show()\n",
+    "\n",
+    "# Print pixel statistics\n",
+    "print(f\"Min: {np.min(data):.2f} °C\")\n",
+    "print(f\"Max: {np.max(data):.2f} °C\")\n",
+    "print(f\"Mean: {np.mean(data):.2f} °C\")\n",
+    "print(f\" TIFF saved at: {tif_file}\")\n"
+   ]
+  }
+ ],
+ "metadata": {
+  "language_info": {
+   "name": "python"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 5
+}
